--- a/talks.html
+++ b/talks.html
@@ -46,7 +46,11 @@
         <p>
         <div class="list">
        <ul>
-           <li> 19th March: <b>Bases for permutation groups</b> [<a href="https://www.bristolmathsresearch.org/seminar/hongyi-huang/">webpage</a>] <br>
+           <li> 11th June: <b>Permutations, bases and low rank groups</b> <br>
+               Heinrich Heine University Düsseldorf, Germany</li>
+           <li> 6th June: <b>Permutations, bases and low rank groups</b> <br>
+               Technische Universität Kaiserslautern, Germany</li>
+           <li> 19th March: <b>Permutations, bases and low rank groups</b> [<a href="https://www.bristolmathsresearch.org/seminar/hongyi-huang/">webpage</a>] <br>
                Algebra Seminar, UoB</li>
            <li> 29th January: <b>Bases for permutation groups</b> [<a href="../talks/Warwick_240129.pdf">notes</a>] [<a href="https://warwick.ac.uk/fac/sci/maths/research/events/seminars/areas/algebra/23-24/">webpage</a>] <br>
                Algebra Seminar, University of Warwick</li>
