--- a/talks.html
+++ b/talks.html
@@ -39,7 +39,7 @@
       <h2> Talks </h2>
 
        <p> </p>
-      <p> I'm happy to give talks/lectures to everyone on any topic that I'm familiar with. The following are my talks about my research projects. </p>
+      <p> I'm happy to give talks/lectures to everyone on any topic that I'm familiar with. The following are my talks about my research projects. Please note that most of the slides or notes only appear for a year -- don't hesitate to be in touch if you want some disappeared ones. </p>
         
 
         <h4> 2024 </h4>
@@ -87,19 +87,31 @@
       <p>
         <div class="list">
        <ul>
-           <li> 5th September: <b>Base-two primitive permutation groups</b> [<a href="../talks/YGT_220905.pdf">slides</a>] [<a href="https://drive.google.com/file/d/1kYnpgCraJK1Vjn1dOYstVIp6OksHnura/view?usp=sharing">video</a>]<br>
+           <li> 5th September: <b>Base-two primitive permutation groups</b> 
+<!--                [<a href="../talks/YGT_220905.pdf">slides</a>]  -->
+               [<a href="https://drive.google.com/file/d/1kYnpgCraJK1Vjn1dOYstVIp6OksHnura/view?usp=sharing">video</a>]<br>
                Young Group Theorists Workshop, Les Diablerets</li>
            <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> [<a href="../talks/Melbourne_220818.pdf">slides</a>] [<a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>]<br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
-           <li> 4th August: <b>Base-two primitive permutation groups</b> [<a href="../talks/StAndrews_220804.pdf">slides</a>] <br>
+           <li> 4th August: <b>Base-two primitive permutation groups</b> 
+<!--                [<a href="../talks/StAndrews_220804.pdf">slides</a>] -->
+               <br>
                Groups St Andrews, Newcastle</li>
-           <li> 24th July: <b>Base-two primitive groups and their Saxl graphs</b> [<a href="../talks/GAG_220724.pdf">slides</a>] <br>
+           <li> 24th July: <b>Base-two primitive groups and their Saxl graphs</b> 
+<!--                [<a href="../talks/GAG_220724.pdf">slides</a>]  -->
+               <br>
                Groups and Graphs, Jiangxi University of Science and Technology</li>
-           <li> 8th July: <b>Base-two primitive permutation groups</b> [<a href="../talks/PGTC_220708.pdf">slides</a>] <br>
+           <li> 8th July: <b>Base-two primitive permutation groups</b>
+<!--                [<a href="../talks/PGTC_220708.pdf">slides</a>]  -->
+               <br>
                23rd Postgraduate Group Theory Conference, Imperial College London</li>
-           <li> 24th May: <b>Bases for primitive permutation groups</b> [<a href="../talks/SUSTech_220524.pdf">slides</a>] [<a href="https://www.gtseminar.xyz/history/2022-05-24-hyh.html">webpage</a>]<br>
+           <li> 24th May: <b>Bases for primitive permutation groups</b> 
+<!--                [<a href="../talks/SUSTech_220524.pdf">slides</a>]  -->
+               [<a href="https://www.gtseminar.xyz/history/2022-05-24-hyh.html">webpage</a>]<br>
                Group Theory Seminar, SUSTech</li>
-         <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> [<a href="../talks/RegPower_220219.pdf">slides</a>] [<a href="https://www.gtseminar.xyz/history/2022-02-19-ropgps.html">webpage</a>] <br>
+         <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> 
+<!--              [<a href="../talks/RegPower_220219.pdf">slides</a>]  -->
+             [<a href="https://www.gtseminar.xyz/history/2022-02-19-ropgps.html">webpage</a>] <br>
            Group Theory Seminar, SUSTech </li>
        </ul>
       </div>
@@ -110,22 +122,36 @@
       <p>
      <div class="list">
        <ul>
-         <li> 13th December: <b> Base-two primitive permutation groups and their Saxl graphs </b> [<a href="../talks/43ACC_211213.pdf">slides</a>] <br>
+         <li> 13th December: <b> Base-two primitive permutation groups and their Saxl graphs </b> 
+<!--              [<a href="../talks/43ACC_211213.pdf">slides</a>] -->
+             <br>
            43rd Australasian Combinatorics Conference, The University of Melbourne </li>
-         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> [<a href="../talks/SUSTech_211114.pdf">slides</a>]<br>
+         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> 
+<!--              [<a href="../talks/SUSTech_211114.pdf">slides</a>] -->
+             <br>
            Groups, Graphs and Combinatorics, SUSTech </li>
-         <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> [<a href="../talks/LMS_211108.pdf">slides</a>]<br>
+         <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> 
+<!--              [<a href="../talks/LMS_211108.pdf">slides</a>] -->
+             <br>
            LMS Graduate Student Meeting Winter 2021 </li>
          <li> 9th October: <b> The distinguishing number of permutation groups </b><br>
            Group Theory Seminar, SUSTech </li>
-       <li> 21st May: <b> Groups, graphs and transitivity </b> [<a href="../talks/Transitive graphs_210521.pdf">slides</a>] <br>
+       <li> 21st May: <b> Groups, graphs and transitivity </b>
+<!--            [<a href="../talks/Transitive graphs_210521.pdf">slides</a>] -->
+           <br>
               Junior Algebra Colloquium, UoB </li>
-       <li> 22nd April: <b> The probabilistic method in group theory </b> [<a href="../talks/Prob_210422.pdf">slides</a>] [<a href="https://math.sustech.edu.cn/seminar_all/12102.html?lang=en">webpage</a>] <br>
+       <li> 22nd April: <b> The probabilistic method in group theory </b> 
+<!--            [<a href="../talks/Prob_210422.pdf">slides</a>]  -->
+           [<a href="https://math.sustech.edu.cn/seminar_all/12102.html?lang=en">webpage</a>] <br>
               Discrete Mathematics Seminar, SUSTech <br>
               (This was also the third part of the following talk.)</li>
-       <li> 11th March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> [<a href="../talks/Fixed point ratios.pdf">slides I</a>] [<a href="../talks/fpr2.pdf">slides II</a>] <br>
+       <li> 11th March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> 
+<!--            [<a href="../talks/Fixed point ratios.pdf">slides I</a>] [<a href="../talks/fpr2.pdf">slides II</a>]  -->
+           <br>
               Seminar on Classical Groups, SUSTech </li>
-       <li> 2nd January: <b> On valency problems of Saxl graphs </b> [<a href="../talks/ValSaxl_Talk_210102.pdf">slides</a>] <br>
+       <li> 2nd January: <b> On valency problems of Saxl graphs </b> 
+<!--            [<a href="../talks/ValSaxl_Talk_210102.pdf">slides</a>] -->
+           <br>
               Workshop on Group Actions and Transitive Graphs, Kunming, China </li>
        </ul>
       </div>
@@ -135,9 +161,13 @@
     <p>
       <div class="list">
         <ul>
-          <li> 26th November: <b> On valency problems of Saxl graphs </b> [<a href="../talks/ValSaxl_Talk_201126.pdf">slides</a>] <br>
+          <li> 26th November: <b> On valency problems of Saxl graphs </b>
+<!--               [<a href="../talks/ValSaxl_Talk_201126.pdf">slides</a>]  -->
+              <br>
           Discrete Mathematics Seminar, SUSTech </li>
-          <li> 17th November: <b> On valency problems of Saxl graphs </b> [<a href="../talks/ValSaxl_Talk_201117.pdf">slides</a>] <br>
+          <li> 17th November: <b> On valency problems of Saxl graphs </b> 
+<!--               [<a href="../talks/ValSaxl_Talk_201117.pdf">slides</a>] -->
+              <br>
           SUSTech </li>
         </ul>
     </div>
