--- a/talks.html
+++ b/talks.html
@@ -46,6 +46,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> July: <b>Permutation groups of rank three</b> <br>
+               Group Theory in Florence IV, University of Florence, Italy</li>
            <li> 11th June: <b>Permutations, bases and low rank groups</b> <br>
                Heinrich Heine University Düsseldorf, Germany</li>
            <li> 6th June: <b>Permutations, bases and low rank groups</b> <br>
