--- a/meetings.html
+++ b/meetings.html
@@ -88,7 +88,7 @@
         <ul>
 
             <li> 16th -- 21st March: <b>Finite Groups, Fusion Systems and Applications</b> [<a href="https://www.mfo.de/occasion/2512/www_view">link</a>] <br>
-            Mathematisches Forschungsinstitut Oberwolfach, Germany </li>
+            Mathematical Research Institute Oberwolfach, Germany </li>
             
             </ul>
     </div>
