--- a/talks.html
+++ b/talks.html
@@ -39,7 +39,7 @@
       <h2> Talks </h2>
 
        <p> </p>
-      <p> I'm happy to give talks to everyone on any topic that I'm familiar with. The following are my talks about my research projects. Please note that most of the slides or notes only appear for a year, and don't hesitate to be in touch if you want some disappeared ones. </p>
+      <p> Please note that most of the slides or notes only appear for a year, and don't hesitate to be in touch if you want some disappeared ones. </p>
         
 
         <h4> 2024 </h4>
