--- a/meetings.html
+++ b/meetings.html
@@ -38,7 +38,7 @@
       
       <h2> Meetings </h2>
      <p> </p>
-    <p> I enjoy discussing problems with other mathematicians, especially those who are creative. So I like meeting people via conferences and research visits.</p>
+    <p> I am always keen to speak to mathematicians via conferences, seminars or research visits. </p>
 
     <h3> Research visits </h3>
     
