--- a/research.html
+++ b/research.html
@@ -98,7 +98,8 @@
 
             <li> <i> Fixers and derangements of finite permutation groups </i> <br>
                 joint with C.H. Li and Y.L. Xie <br>
-                40 pages, submitted
+                40 pages, submitted <br>
+                <a href="https://arxiv.org/abs/2404.18753">arXiv: 2404.18753</a>
             </li>
           
           
