--- a/talks.html
+++ b/talks.html
@@ -46,8 +46,12 @@
         <p>
         <div class="list">
        <ul>
+           <li> September: <b>The generalised Saxl graphs of finite permutation groups</b> <br>
+               Topics in Group Theory, Padova, Italy</li>
            <li> July: <b>Permutation groups of rank three</b> <br>
                Group Theory in Florence IV, University of Florence, Italy</li>
+           <li> 13th June: <b>Permutations, bases and low rank groups</b> <br>
+               RWTH Aachen University, Germany</li>
            <li> 11th June: <b>Permutations, bases and low rank groups</b> <br>
                Heinrich Heine University Düsseldorf, Germany</li>
            <li> 6th June: <b>Permutations, bases and low rank groups</b> <br>
