--- a/talks.html
+++ b/talks.html
@@ -50,11 +50,11 @@
                Topics in Group Theory, Padova, Italy</li>
            <li> 2nd July: <b>Permutation groups of rank three</b> [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
                Group Theory in Florence IV, University of Florence, Italy</li>
-           <li> 13th June: <b>Permutations, bases and low rank groups</b> [<a href="https://jas.rwth-aachen.de/">webpage</a>]<br>
+           <li> 13th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://jas.rwth-aachen.de/">webpage</a>]<br>
                Joint Algebra Seminar, RWTH Aachen University, Germany</li>
-           <li> 11th June: <b>Permutations, bases and low rank groups</b> [<a href="https://reh.math.uni-duesseldorf.de/~internet/Seminar_Groups/">webpage</a>]<br>
+           <li> 11th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://reh.math.uni-duesseldorf.de/~internet/Seminar_Groups/">webpage</a>]<br>
                Advanced Seminar on Group Theory, HHU Düsseldorf, Germany</li>
-           <li> 6th June: <b>Permutations, bases and low rank groups</b> [<a href="https://math.rptu.de/ags/agag/aktivitaeten/oberseminare/seminar-gruppen-und-darstellungen/">webpage</a>] <br>
+           <li> 6th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://math.rptu.de/ags/agag/aktivitaeten/oberseminare/seminar-gruppen-und-darstellungen/">webpage</a>] <br>
                Guest Seminar Groups and Representations, University of Kaiserslautern-Landau, Germany</li>
            <li> 19th March: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Bristol_240319.pdf">notes</a>] [<a href="https://www.bristolmathsresearch.org/seminar/hongyi-huang/">webpage</a>] <br>
                Algebra Seminar, UoB</li>
