--- a/meetings.html
+++ b/meetings.html
@@ -104,7 +104,8 @@
             <li> 10th -- 13th September: <b>Topics in Group Theory</b> [<a href="https://events.math.unipd.it/tgt/">link</a>] <br>
             University of Padova, Italy </li>
             <li> 1st -- 3rd July: <b>Group Theory in Florence IV</b> [<a href="https://sites.google.com/view/groupsinflorenceiv/main?authuser=0">link</a>] <br>
-            University of Florence, Italy </li>
+            University of Florence, Italy <br>
+            Travel supported by the <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/alumni-travel-grant/">Alumni Grant</a> from UoB</li>
             <li> 24th -- 26th June: <b>New perspectives in Computational Group Theory</b> [<a href="https://sites.google.com/view/newperspectivescgt/home">link</a>] <br>
             University of Warwick, UK </li>
             
