--- a/meetings.html
+++ b/meetings.html
@@ -105,7 +105,7 @@
             University of Padova, Italy </li>
             <li> 1st -- 3rd July: <b>Group Theory in Florence IV</b> [<a href="https://sites.google.com/view/groupsinflorenceiv/main?authuser=0">link</a>] <br>
             University of Florence, Italy <br>
-            Travel supported by the <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/alumni-travel-grant/">Alumni Grant</a> from UoB</li>
+            <i>Travel supported by the <a href="https://www.bristol.ac.uk/students/support/finances/scholarships/alumni-travel-grant/">Alumni Grant</a> from UoB</i></li>
             <li> 24th -- 26th June: <b>New perspectives in Computational Group Theory</b> [<a href="https://sites.google.com/view/newperspectivescgt/home">link</a>] <br>
             University of Warwick, UK </li>
             
