--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
-  <title>Hong Yi Huang</title>
+  <title>Hongyi Huang</title>
 </head>
 
 <body>
 <header>
-    <h1>Hong Yi Huang</h1>
+    <h1>Hongyi Huang</h1>
 
 </header>
 <hr/>
@@ -50,6 +50,10 @@
       I am co-organising the <a href="https://www.gtseminar.xyz/">Seminars on Groups and Graphs</a> based at SUSTech from 2021.
     </p>
 
+        <p>
+      The name "Hong Yi Huang" is only used for papers and research profiles (to distinguish myself from millions of "H. Huang"). Please call me "Hongyi" in any other case.
+    </p>
+
 
        
        
@@ -57,7 +61,6 @@
         <h2>Find me</h2>
         <p>
             <b>Name in Chinese:</b> 黄弘毅<br><br>
-            <b>Preferred contact name:</b> Hongyi (he/him)<br><br>
             <b>Email:</b> hy.huang (AT) bristol.ac.uk<br><br>
             <b>Address:</b> <a href="http://www.bristol.ac.uk/maths/">School of Mathematics</a>, <a href="https://www.bristol.ac.uk/">University of Bristol</a>, BS8 1UG, UK<br><br>
             <b>Office:</b> 1.14 Fry Building, BS8 1UG<br><br>
