--- a/talks.html
+++ b/talks.html
@@ -48,7 +48,7 @@
        <ul>
            <li> September: <b>The generalised Saxl graphs of finite permutation groups</b> <br>
                Topics in Group Theory, Padova, Italy</li>
-           <li> 2nd July: <b>Permutation groups of rank three</b> [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
+           <li> 2nd July: <b>Permutation groups of rank three</b> [<a href="../talks/rank3_Florence_240702.pdf">slides</a>] [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
                Group Theory in Florence IV, University of Florence, Italy</li>
            <li> 13th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://jas.rwth-aachen.de/">webpage</a>]<br>
                Joint Algebra Seminar, RWTH Aachen, Germany</li>
