--- a/teaching.html
+++ b/teaching.html
@@ -10,12 +10,12 @@
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
-  <title>Hong Yi Huang</title>
+  <title>Hongyi Huang</title>
 </head>
 
 <body>
 <header>
-    <h1>Hong Yi Huang</h1>
+    <h1>Hongyi Huang</h1>
 
 </header>
 <hr/>
