--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <lin><a href="meetings.html">Meetings</a></lin>
             <lin><a href="talks.html">Talks</a></lin>
             <lin><a href="teaching.html">Teaching</a></lin>
+            <lin><a href="food.html">Food</a></lin>
         </ul>
     </div>
 
