--- a/food.html
+++ b/food.html
@@ -70,8 +70,16 @@ Most of the guides are joint with my love Bo Lan, who has better understanding o
         
         <ol>
             
-           <li> <i>Florence, Italy</i> <br>
+           <li> Florence, Italy <br>
               to appear in July 2024 <br>
+           </li>
+
+            <li> Bristol, UK <br>
+              to appear in late 2024 <br>
+           </li>
+
+            <li> Wenzhou, China <br>
+              to appear in early 2025 <br>
            </li>
 
         </ol>
