--- a/food.html
+++ b/food.html
@@ -70,7 +70,7 @@ Most of the guides are joint with my love Bo Lan, who has better understanding o
         
         <ol>
             
-           <li> Florence, Italy <br>
+           <li> Florence (Firenze), Italy <br>
               to appear in July 2024 <br>
            </li>
 
@@ -78,7 +78,7 @@ Most of the guides are joint with my love Bo Lan, who has better understanding o
               to appear in late 2024 <br>
            </li>
 
-            <li> Wenzhou, China <br>
+            <li> Wenzhou (温州), China <br>
               to appear in early 2025 <br>
            </li>
 
