--- a/food.html
+++ b/food.html
@@ -63,7 +63,7 @@ Due to my language ability, sometimes I find it struggled to express my own feel
         </p>
 
         <p>
-Most of the guides are joint with my love Bo Lan, who has better understanding on food than myself.
+Most of the articles are joint with my love Bo Lan, who has better understanding on food than myself.
         </p>
     
     <p>
