--- a/food.html
+++ b/food.html
@@ -71,19 +71,19 @@ Most of the articles are joint with my love Bo Lan, who has better understanding
         <ol>
             
            <li> Florence (Firenze), Italy <br>
-              to appear in July 2024 <br>
+              scheduled to appear in July 2024 <br>
            </li>
 
             <li> Bristol, UK <br>
-              to appear in late 2024 <br>
+              scheduled to appear in late 2024 <br>
            </li>
 
             <li> Wenzhou (温州), China <br>
-              to appear in early 2025 <br>
+              scheduled to appear in early 2025 <br>
            </li>
 
             <li> Shenzhen (深圳), China <br>
-              to appear in early 2025 <br>
+              scheduled to appear in early 2025 <br>
            </li>
 
         </ol>
