--- a/food.html
+++ b/food.html
@@ -75,7 +75,7 @@ Most of the articles are joint with my love Bo Lan, who has better understanding
            </li>
 
             <li> Bristol, UK <br>
-              scheduled to appear in late 2024 <br>
+              scheduled to appear in November 2024 <br>
            </li>
 
             <li> Wenzhou (温州), China <br>
