--- a/food.html
+++ b/food.html
@@ -70,8 +70,9 @@ Most of the articles are joint with my love Bo Lan, who has better understanding
         
         <ol>
             
-           <li> Florence (Firenze), Italy <br>
-              scheduled to appear in July 2024 <br>
+           <li> [<a href="../food/Florence.pdf">Florence</a>] (Firenze), Italy <br>
+               <i>With suggestions given by Marco Fusari and Bo Lan</i> <br>
+              First version: 25 July 2024 | Last updated: 25 July 2024 <br>
            </li>
 
             <li> Bristol, UK <br>
