--- a/food.html
+++ b/food.html
@@ -70,7 +70,7 @@ Most of the articles are joint with my love Bo Lan, who has better understanding
         
         <ol>
             
-           <li> [<a href="../food/Florence.pdf">Florence</a>] (Firenze), Italy <br>
+           <li> <a href="../food/Florence.pdf">Florence (Firenze), Italy</a> <br>
                <i>With suggestions given by Marco Fusari and Bo Lan</i> <br>
               First version: 25 July 2024 | Last updated: 25 July 2024 <br>
            </li>
