--- a/research.html
+++ b/research.html
@@ -91,7 +91,7 @@
                 <a href="https://arxiv.org/abs/2303.14290">arXiv: 2303.14290</a> | <a href="https://doi.org/10.1017/fms.2023.121">doi: 10.1017/fms.2023.121</a> | <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4685056">MathSciNet: MR4685056</a>
             </li>
 
-            <li> <i> Finite permutation groups of rank \(3\) </i> <br>
+            <li> <i> On finite permutation groups of rank three </i> <br>
                 joint with C.H. Li and Y.Z. Zhu <br>
                 22 pages, submitted <br>
                 <a href="https://arxiv.org/abs/2311.04057">arXiv: 2311.04057</a>
