--- a/talks.html
+++ b/talks.html
@@ -47,9 +47,11 @@
         <p>
         <div class="list">
        <ul>
+           <li> 18th September: <b>Bases and Saxl graphs for permutation groups</b> <br>
+               Bristol Junior Algebra and Combinatorics Seminar, UoB</li>
            <li> September: <b>The generalised Saxl graphs of finite permutation groups</b> <br>
                Topics in Group Theory, Padova, Italy</li>
-           <li> September: <b>Bases for permutation groups</b> <br>
+           <li> 6th September: <b>Bases for permutation groups</b> <br>
                University of Milano-Bicocca, Italy</li>
            <li> 2nd July: <b>Permutation groups of rank three</b> [<a href="../talks/rank3_Florence_240702.pdf">slides</a>] [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
                Group Theory in Florence IV, University of Florence, Italy</li>
