--- a/research.html
+++ b/research.html
@@ -48,7 +48,7 @@
         
     <p>
         In my recent <a href="https://doi.org/10.1017/fms.2023.121">paper</a>, I determine the precise base size of every finite <a href="https://en.wikipedia.org/wiki/Primitive_permutation_group">primitive permutation group</a> of diagonal type.
-        In view of the <a href="https://en.wikipedia.org/wiki/O%27Nan%E2%80%93Scott_theorem">O'Nan-Scott theorem</a> (5-type version), this is the first family of primitive groups for which people have a complete answer on base sizes.
+        In terms of the <a href="https://en.wikipedia.org/wiki/O%27Nan%E2%80%93Scott_theorem">O'Nan-Scott theorem</a> (5-type version), this is the first family of primitive groups for which people have a complete answer on base sizes.
     </p>
     
 
