--- a/talks.html
+++ b/talks.html
@@ -49,7 +49,7 @@
        <ul>
            <li> 18th September: <b>Bases and Saxl graphs for permutation groups</b> <br>
                Bristol Junior Algebra and Combinatorics Seminar, UoB</li>
-           <li> September: <b>The generalised Saxl graphs of finite permutation groups</b> <br>
+           <li> 11th September: <b>The generalised Saxl graphs of finite permutation groups</b> <br>
                Topics in Group Theory, Padova, Italy</li>
            <li> 6th September: <b>Bases for permutation groups</b> <br>
                University of Milano-Bicocca, Italy</li>
