--- a/meetings.html
+++ b/meetings.html
@@ -62,6 +62,10 @@
         <p>
       <div class="list">
         <ul>
+            <li> <i>26th Postgraduate Group Theory Conference (PGTC 2025)</i> [website to appear]<br>
+            UoB, 2025 <br>
+            with lots of PhD students at UoB
+          </li>
           <li> <i>Bristol Junior Algebra and Combinatorics Seminar</i> [<a href="https://sites.google.com/view/bjacs/home">website</a>] <br>
             UoB, 2024 <br>
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> </li>
