--- a/meetings.html
+++ b/meetings.html
@@ -62,7 +62,7 @@
         <p>
       <div class="list">
         <ul>
-            <li> <i>26th Postgraduate Group Theory Conference (PGTC 2025)</i> [website to appear]<br>
+            <li> <i>26th Postgraduate Group Theory Conference (PGTC)</i> [website to appear]<br>
             UoB, 2025 <br>
             with lots of PhD students at UoB
           </li>
