--- a/talks.html
+++ b/talks.html
@@ -51,7 +51,7 @@
                Bristol Junior Algebra and Combinatorics Seminar, UoB</li>
            <li> 11th September: <b>The generalised Saxl graphs of finite permutation groups</b> [<a href="../talks/Padova_240911.pdf">slides</a>] <br>
                Topics in Group Theory, Padova, Italy</li>
-           <li> 6th September: <b>Bases for permutation groups</b> [<a href="../talks/Biccoca_240906.pdf">notes</a>] [<a href="https://sites.google.com/unimib.it/algebra-in-bicocca-english/algebra-seminar">webpage</a>] <br>
+           <li> 6th September: <b>Bases for permutation groups</b> [<a href="../talks/Bicocca_240906.pdf">notes</a>] [<a href="https://sites.google.com/unimib.it/algebra-in-bicocca-english/algebra-seminar">webpage</a>] <br>
                University of Milano-Bicocca, Italy</li>
            <li> 2nd July: <b>Permutation groups of rank three</b> [<a href="../talks/rank3_Florence_240702.pdf">slides</a>] [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
                Group Theory in Florence IV, University of Florence, Italy</li>
