--- a/talks.html
+++ b/talks.html
@@ -52,7 +52,7 @@
            <li> 11th September: <b>The generalised Saxl graphs of finite permutation groups</b> [<a href="../talks/Padova_240911.pdf">slides</a>] <br>
                Topics in Group Theory, Padova, Italy</li>
            <li> 6th September: <b>Bases for permutation groups</b> [<a href="../talks/Bicocca_240906.pdf">notes</a>] [<a href="https://sites.google.com/unimib.it/algebra-in-bicocca-english/algebra-seminar">webpage</a>] <br>
-               University of Milano-Bicocca, Italy</li>
+               Algebra Seminar, University of Milano-Bicocca, Italy</li>
            <li> 2nd July: <b>Permutation groups of rank three</b> [<a href="../talks/rank3_Florence_240702.pdf">slides</a>] [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
                Group Theory in Florence IV, University of Florence, Italy</li>
            <li> 13th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://jas.rwth-aachen.de/">webpage</a>]<br>
