--- a/food.html
+++ b/food.html
@@ -76,8 +76,9 @@ Most of the articles are joint with my love Bo Lan, who has better understanding
                 Last updated: 31 July 2024 <br>
            </li>
 
-            <li> Bristol, UK <br>
-              scheduled to appear in November 2024 <br>
+            <li> <a href="../food/Bristol.pdf">Bristol, UK</a> <br>
+              First version: 19 September 2024 <br>
+                Last updated: 19 September 2024 <br>
            </li>
 
             <li> Wenzhou (温州), China <br>
