--- a/research.html
+++ b/research.html
@@ -120,6 +120,11 @@
             Supervisor: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a><br>
             Undergraduate thesis, SUSTech (2020) [<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>]
           </li>
+
+            <li> <i>Bases for permutation groups and related problems</i> <br>
+            Supervisor: <a href="https://seis.bristol.ac.uk/~tb13602/">Professor Tim Burness</a><br>
+            PhD thesis, UoB, in preparation.
+          </li>
         </ol>
   </p>
  
