--- a/talks.html
+++ b/talks.html
@@ -73,21 +73,37 @@
         <p>
         <div class="list">
        <ul>
-           <li> 30th November: <b>Bases for permutation groups</b> [<a href="../talks/Birmingham_231130.pdf">notes</a>] [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
+           <li> 30th November: <b>Bases for permutation groups</b> 
+<!--                [<a href="../talks/Birmingham_231130.pdf">notes</a>]  -->
+               [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
-           <li> 18th November: <b>Bases for permutation groups</b> [<a href="../talks/Alg_231118.pdf">slides</a>] <br>
+           <li> 18th November: <b>Bases for permutation groups</b> 
+<!--                [<a href="../talks/Alg_231118.pdf">slides</a>] -->
+               <br>
                16th National Conference on Algebra, Quanzhou, China</li>
-           <li> 11th November: <b>Bases for permutation groups</b> [<a href="../talks/SUSTech_231111.pdf">slides</a>] <br>
+           <li> 11th November: <b>Bases for permutation groups</b>
+<!--                [<a href="../talks/SUSTech_231111.pdf">slides</a>]  -->
+               <br>
                4th International Conference on Groups, Graphs and Combinatorics, SUSTech</li>
-           <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="../talks/XMU_230926.pdf">notes</a>] [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
+           <li> 26th September: <b>Symmetry breaking on graphs and groups</b> 
+<!--                [<a href="../talks/XMU_230926.pdf">notes</a>]  -->
+               [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
                Seminars on Discrete Mathematics, Xiamen University</li>
-           <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> [<a href="../talks/CNU_230916.pdf">notes</a>]<br>
+           <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> 
+<!--                [<a href="../talks/CNU_230916.pdf">notes</a>] -->
+               <br>
                Capital Normal University</li>
-           <li> 7th September: <b>Bases for permutation groups</b> [<a href="../talks/SUSTech_230907.pdf">notes</a>] <br>
+           <li> 7th September: <b>Bases for permutation groups</b> 
+<!--                [<a href="../talks/SUSTech_230907.pdf">notes</a>]  -->
+               <br>
                SUSTech</li>
-           <li> 23rd March: <b>Bases for permutation groups</b> [<a href="../talks/JLAC_230323.pdf">notes</a>]<br>
+           <li> 23rd March: <b>Bases for permutation groups</b> 
+<!--                [<a href="../talks/JLAC_230323.pdf">notes</a>] -->
+               <br>
                Junior London Algebra Colloquium, Imperial College London</li>
-           <li> 4th March: <b>Symmetry breaking on primitive groups</b> [<a href="../talks/Sym_break_230304.pdf">slides</a>] [<a href="https://www.gtseminar.xyz/history/2023-03-04-hyh.html">webpage</a>]<br>
+           <li> 4th March: <b>Symmetry breaking on primitive groups</b> 
+<!--                [<a href="../talks/Sym_break_230304.pdf">slides</a>]  -->
+               [<a href="https://www.gtseminar.xyz/history/2023-03-04-hyh.html">webpage</a>]<br>
                Seminars on Groups and Graphs, SUSTech</li>
        </ul>
       </div>
@@ -102,7 +118,9 @@
 <!--                [<a href="../talks/YGT_220905.pdf">slides</a>]  -->
                [<a href="https://drive.google.com/file/d/1kYnpgCraJK1Vjn1dOYstVIp6OksHnura/view?usp=sharing">video</a>]<br>
                Young Group Theorists Workshop, Les Diablerets</li>
-           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> [<a href="../talks/Melbourne_220818.pdf">slides</a>] [<a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>]<br>
+           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> 
+<!--                [<a href="../talks/Melbourne_220818.pdf">slides</a>] -->
+               [<a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>]<br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> 4th August: <b>Base-two primitive permutation groups</b> 
 <!--                [<a href="../talks/StAndrews_220804.pdf">slides</a>] -->
