--- a/talks.html
+++ b/talks.html
@@ -57,7 +57,7 @@
                Group Theory in Florence IV, University of Florence, Italy</li>
            <li> 13th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://jas.rwth-aachen.de/">webpage</a>]<br>
                Joint Algebra Seminar, RWTH Aachen, Germany</li>
-           <li> 11th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://reh.math.uni-duesseldorf.de/~internet/Seminar_Groups/">webpage</a>]<br>
+           <li> 11th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://reh.math.uni-duesseldorf.de/~internet/Seminar_Groups/seminarS24.html">webpage</a>]<br>
                Advanced Seminar on Group Theory, HHU Düsseldorf, Germany</li>
            <li> 6th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://math.rptu.de/ags/agag/aktivitaeten/oberseminare/seminar-gruppen-und-darstellungen/">webpage</a>] <br>
                Guest Seminar Groups and Representations, RPTU Kaiserslautern-Landau, Germany</li>
