--- a/talks.html
+++ b/talks.html
@@ -47,6 +47,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> 12th December: <b>Bases and Saxl graphs in the past four years</b> <br>
+               Discrete Mathematics Seminar, SUSTech</li>
            <li> 18th September: <b>Bases and Saxl graphs for permutation groups</b> [<a href="../talks/BJACS_240918.pdf">notes</a>] [<a href="https://sites.google.com/view/bjacs/talks#h.okm2vmbxydpw">webpage</a>] <br>
                Bristol Junior Algebra and Combinatorics Seminar, UoB</li>
            <li> 11th September: <b>The generalised Saxl graphs of finite permutation groups</b> [<a href="../talks/Padova_240911.pdf">slides</a>] <br>
