--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
 
         <p> In 2022, I participated in the <a href="https://www.newton.ac.uk/event/gr2w02/">Simple groups, representations and applications</a> programme at the <a href="https://www.newton.ac.uk/">Isaac Newton Institute</a> in Cambridge. A brief description of my research on base-two primitive groups and their Saxl graphs up to that time can be found in my <a href="poster_2022_portrait.pdf">poster</a> for this programme.</p>
 
-<p> My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number">Erdős number</a> is 3. For example, there are two disjoint geodesics:
+<p> My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number">Erdős number</a> is 3. For example, there are three disjoint geodesics:
     <ul>
            <li> H.Y. Huang -- T.C. Burness -- Á. Seress -- P. Erdős </li>
            <li> H.Y. Huang -- C.H. Li -- P.P. Pálfy (or J. Širáň) -- P. Erdős </li>
