--- a/research.html
+++ b/research.html
@@ -106,7 +106,8 @@
 
             <li> <i> On the generalised Saxl graphs of permutation groups </i> <br>
                 joint with S.D. Freedman, M. Lee and K. Rekvényi <br>
-                35 pages, submitted
+                35 pages, submitted <br>
+                <a href="https://arxiv.org/abs/2410.22613">arXiv: 2410.22613</a>
             </li>
           
           
