--- a/food.html
+++ b/food.html
@@ -30,7 +30,7 @@
             <lin><a href="meetings.html">Meetings</a></lin>
             <lin><a href="talks.html">Talks</a></lin>
             <lin><a href="teaching.html">Teaching</a></lin>
-            <lin><a href="food.html">Food</a></lin>
+<!--             <lin><a href="food.html">Food</a></lin> -->
         </ul>
     </div>
 
@@ -44,7 +44,7 @@
         
 
         <p>
-            This page includes recommendations on restaurants (with reasonable prices) and special food in some cities that I explored or even lived in. Everything is based on my own opinion on food tasting, which means you may have different feelings.
+            Welcome to this hidden page, which records my recommendations on restaurants (with reasonable prices) and special food in some cities that I explored or even lived in. Everything is based on my own opinion on food tasting, which means you may have different feelings.
         </p>
 
         <p>
