--- a/meetings.html
+++ b/meetings.html
@@ -159,7 +159,9 @@
           <li> 30th July -- 7th August: <b>Groups St Andrews</b> [<a href="https://groupsstandrews.wp.st-andrews.ac.uk/groups-st-andrews/groups-st-andrews-2022-in-newcastle/">link</a>] <br>
             Newcastle University, UK </li>
             <li> 25th -- 29th July: <b>Simple groups, representations and applications</b> [<a href="https://www.newton.ac.uk/event/gr2w02/">link</a>] <br>
-                Isaac Newton Institute, University of Cambridge, UK </li>
+                Isaac Newton Institute, University of Cambridge, UK <br>
+            <i>I presented a <a href="poster_2022_portrait.pdf">poster</a> in this programme</i>
+            </li>
           <li> 24th July -- 14th August: <b>Groups and Graphs</b><br>
             Jiangxi University of Science and Technology, China (online) </li>
           <li> 6th -- 8th July: <b>23rd Postgraduate Group Theory Conference</b> [<a href="https://nms.kcl.ac.uk/miriam.norris/pgtc.html#home">link</a>] <br>
