--- a/food.html
+++ b/food.html
@@ -68,7 +68,7 @@ Most of the articles are joint with my love Bo Lan, who has better understanding
 
         <p>
             A quick note: Some of the reviews can be found via my Google account "Hongyi Huang". Additionally, Bo and I gave Caffé Pedrocchi in Padova 1-star reviews based on our real experience there,
-            which seem to be quickly reported by the owners and removed from Google. They seem to do the same things to other low-star reviews, which is disgusting.
+            which seem to be quickly reported by the owners and removed from Google (they say it is "fake engagement", which is ridiculous). They seem to do the same things to other low-star reviews, which is disgusting.
             I expect their real rating is about 3. Please avoid this place!
         </p>
     
