--- a/meetings.html
+++ b/meetings.html
@@ -95,7 +95,9 @@
         <ul>
 
             <li> 16th -- 21st March: <b>Finite Groups, Fusion Systems and Applications</b> [<a href="https://www.mfo.de/occasion/2512/www_view">link</a>] <br>
-            Mathematical Research Institute Oberwolfach, Germany </li>
+            Mathematical Research Institute Oberwolfach, Germany <br>
+                <i>Travel partially supported by the Oberwolfach Leibniz Graduate Students grant</i>
+            </li>
             <li> 10th -- 13th January: <b>Groups, Graphs and Combinatorics</b> <br>
             Yunnan University, Kunming, China </li>
             
