--- a/research.html
+++ b/research.html
@@ -124,7 +124,7 @@
   <p>
         <ol>
           <li> <i>On valency problems of Saxl graphs of almost simple primitive groups with soluble stabiliser</i> <br>
-            Supervisor: <a href="https://research-repository.uwa.edu.au/en/persons/cai-heng-li">Professor Cai Heng Li</a><br>
+            Supervisor: <a href="https://faculty.sustech.edu.cn/?tagid=lich&iscss=1&snapid=1&orderby=date&go=2&lang=en">Professor Cai Heng Li</a><br>
             Undergraduate thesis, SUSTech (2020) [<a href="On Valency Problems of Saxl Graphs of Almost Simple Primitive Groups with Soluble Stabilise.pdf">pdf</a>]
           </li>
 
