--- a/research.html
+++ b/research.html
@@ -94,7 +94,7 @@
 
             <li> <i> On finite permutation groups of rank three </i> <br>
                 joint with C.H. Li and Y.Z. Zhu <br>
-                22 pages, submitted <br>
+                <b>Journal of Algebra</b>, to apper, 22 pages<br>
                 <a href="https://arxiv.org/abs/2311.04057">arXiv: 2311.04057</a>
             </li>
 
