--- a/meetings.html
+++ b/meetings.html
@@ -96,7 +96,7 @@
 
             <li> 16th -- 21st March: <b>Finite Groups, Fusion Systems and Applications</b> [<a href="https://www.mfo.de/occasion/2512/www_view">link</a>] <br>
             Mathematical Research Institute Oberwolfach, Germany <br>
-                <i>Travel partially supported by the Oberwolfach Leibniz Graduate Students grant</i>
+                <i>Travel partially supported by the <a href="https://www.mfo.de/scientific-program/grants/become-an-oberwolfach-leibniz-graduate-student">Oberwolfach Leibniz Graduate Students grant</a></i>
             </li>
             <li> 10th -- 13th January: <b>Groups, Graphs and Combinatorics</b> <br>
             Yunnan University, Kunming, China </li>
