--- a/research.html
+++ b/research.html
@@ -95,7 +95,7 @@
             <li> <i> On finite permutation groups of rank three </i> <br>
                 joint with C.H. Li and Y.Z. Zhu <br>
                 <b>Journal of Algebra</b>, to appear, 22 pages<br>
-                <a href="https://arxiv.org/abs/2311.04057">arXiv: 2311.04057</a>
+                <a href="https://arxiv.org/abs/2311.04057">arXiv: 2311.04057</a> | <a href="https://doi.org/10.1016/j.jalgebra.2024.11.028">doi: 10.1016/j.jalgebra.2024.11.028</a>
             </li>
 
             <li> <i> Fixers and derangements of finite permutation groups </i> <br>
