--- a/talks.html
+++ b/talks.html
@@ -60,9 +60,9 @@
         <p>
         <div class="list">
        <ul>
-           <li> 24th December: <b>Permutation groups, symmetry breaking and probability</b> <br>
+           <li> 24th December: <b>Permutation groups, symmetry breaking and probability</b> [<a href="../talks/ZJU_241224.pdf">notes</a>] <br>
                Zhejiang University</li>
-           <li> 12th December: <b>Bases and Saxl graphs over the past four years</b> <br>
+           <li> 12th December: <b>Bases and Saxl graphs over the past four years</b> [<a href="../talks/SUSTech_241212.pdf">notes</a>] [<a href="https://math.sustech.edu.cn/seminar_all/13205.html">webpage</a>]<br>
                Discrete Mathematics Seminar, SUSTech</li>
            <li> 18th September: <b>Bases and Saxl graphs for permutation groups</b> [<a href="../talks/BJACS_240918.pdf">notes</a>] [<a href="https://sites.google.com/view/bjacs/talks#h.okm2vmbxydpw">webpage</a>] <br>
                Bristol Junior Algebra and Combinatorics Seminar, UoB</li>
