--- a/talks.html
+++ b/talks.html
@@ -49,7 +49,7 @@
        <ul>
            <li> 17th April: <b>TBC</b> <br>
                Pure Mathematics Colloquium, University of St Andrews</li>
-           <li> 12th January: <b>Regular subgroups of primitive groups</b> <br>
+           <li> 12th January: <b>Regular subgroups of primitive groups</b> [<a href="../talks/Kunming_251112.pdf">slides</a>] <br>
                Groups, Graphs and Combinatorics, Kunming</li>
        </ul>
       </div>
