--- a/meetings.html
+++ b/meetings.html
@@ -64,10 +64,10 @@
         <p>
       <div class="list">
         <ul>
-<!--             <li> <i>26th Postgraduate Group Theory Conference (PGTC)</i> [website to appear]<br>
-            UoB, 2025 <br>
-            with lots of PhD students at UoB
-          </li> -->
+            <li> <i>26th Postgraduate Group Theory Conference (PGTC)</i> [website to appear]<br>
+            UoB, July 2025 <br>
+            with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a>, <a href="https://penelopeazuelos.com/">Pénélope Azuelos</a>, <a href="https://dguo97.github.io//">David Guo</a>, <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> and <a href="https://research-information.bris.ac.uk/en/persons/sarah-o-n-martin">Sarah Martin</a>
+          </li>
           <li> <i>Bristol Junior Algebra and Combinatorics Seminar</i> [<a href="https://sites.google.com/view/bjacs/home">website</a>] <br>
             UoB, 2024 <br>
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> </li>
@@ -93,7 +93,8 @@
         <p>
             <div class="list">
         <ul>
-
+            <li> 1st -- 4th July: <b>26th Postgraduate Group Theory Conference</b> <br>
+            UoB </li>
             <li> 16th -- 21st March: <b>Finite Groups, Fusion Systems and Applications</b> [<a href="https://www.mfo.de/occasion/2512/www_view">link</a>] <br>
             Mathematical Research Institute Oberwolfach, Germany <br>
                 <i>Travel partially supported by the <a href="https://www.mfo.de/scientific-program/grants/become-an-oberwolfach-leibniz-graduate-student">Oberwolfach Leibniz Graduate Students grant</a></i>
