--- a/meetings.html
+++ b/meetings.html
@@ -69,7 +69,7 @@
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a>, <a href="https://penelopeazuelos.com/">Pénélope Azuelos</a>, <a href="https://dguo97.github.io//">David Guo</a>, <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> and <a href="https://research-information.bris.ac.uk/en/persons/sarah-o-n-martin">Sarah Martin</a>
           </li>
           <li> <i>Bristol Junior Algebra and Combinatorics Seminar</i> [<a href="https://sites.google.com/view/bjacs/home">website</a>] <br>
-            UoB, 2024 <br>
+            UoB, February -- May 2024 <br>
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> </li>
           <li> <i>4th International Conference on Groups, Graphs and Combinatorics</i> <br>
             SUSTech, November 2023 <br>
@@ -94,7 +94,7 @@
             <div class="list">
         <ul>
             <li> 1st -- 4th July: <b>26th Postgraduate Group Theory Conference</b> <br>
-            UoB </li>
+            UoB, Bristol, UK </li>
             <li> 16th -- 21st March: <b>Finite Groups, Fusion Systems and Applications</b> [<a href="https://www.mfo.de/occasion/2512/www_view">link</a>] <br>
             Mathematical Research Institute Oberwolfach, Germany <br>
                 <i>Travel partially supported by the <a href="https://www.mfo.de/scientific-program/grants/become-an-oberwolfach-leibniz-graduate-student">Oberwolfach Leibniz Graduate Students grant</a></i>
