--- a/talks.html
+++ b/talks.html
@@ -40,7 +40,7 @@
       <h2> Talks </h2>
 
        <p> </p>
-      <p> Please note that most of the slides or notes only appear for a year, and don't hesitate to be in touch if you want some disappeared ones. </p>
+      <p> Please note that most of the slides or notes only appear for a calendar year, and don't hesitate to be in touch if you want to see some disappeared ones. </p>
         
 
         <h4> 2025 </h4>
@@ -48,7 +48,11 @@
         <div class="list">
        <ul>
            <li> 17th April: <b>TBC</b> <br>
-               Pure Mathematics Colloquium, University of St Andrews</li>
+               Pure Mathematics Colloquium, University of St Andrews [<a href="https://www.yoavlen.com/colloquium">webpage</a>] </li>
+           <li> 26th February: <b>Bases and Saxl graphs for permutation groups</b> <br>
+               Great Bay University, Dongguan, China</li>
+           <li> 25th February: <b>Bases and Saxl graphs for permutation groups</b> <br>
+               Guangxi University, Nanning, China</li>
            <li> 12th January: <b>Regular subgroups of primitive groups</b> [<a href="../talks/Kunming_251112.pdf">slides</a>] <br>
                Groups, Graphs and Combinatorics, Kunming</li>
        </ul>
@@ -60,27 +64,49 @@
         <p>
         <div class="list">
        <ul>
-           <li> 24th December: <b>Permutation groups, symmetry breaking and probability</b> [<a href="../talks/ZJU_241224.pdf">notes</a>] <br>
+           <li> 24th December: <b>Permutation groups, symmetry breaking and probability</b> 
+<!--                [<a href="../talks/ZJU_241224.pdf">notes</a>]  -->
+               <br>
                Zhejiang University</li>
-           <li> 12th December: <b>Bases and Saxl graphs over the past four years</b> [<a href="../talks/SUSTech_241212.pdf">notes</a>] [<a href="https://math.sustech.edu.cn/seminar_all/13205.html">webpage</a>]<br>
+           <li> 12th December: <b>Bases and Saxl graphs over the past four years</b>
+<!--                [<a href="../talks/SUSTech_241212.pdf">notes</a>]  -->
+               [<a href="https://math.sustech.edu.cn/seminar_all/13205.html">webpage</a>]<br>
                Discrete Mathematics Seminar, SUSTech</li>
-           <li> 18th September: <b>Bases and Saxl graphs for permutation groups</b> [<a href="../talks/BJACS_240918.pdf">notes</a>] [<a href="https://sites.google.com/view/bjacs/talks#h.okm2vmbxydpw">webpage</a>] <br>
+           <li> 18th September: <b>Bases and Saxl graphs for permutation groups</b> 
+<!--                [<a href="../talks/BJACS_240918.pdf">notes</a>] -->
+               [<a href="https://sites.google.com/view/bjacs/talks#h.okm2vmbxydpw">webpage</a>] <br>
                Bristol Junior Algebra and Combinatorics Seminar, UoB</li>
-           <li> 11th September: <b>The generalised Saxl graphs of finite permutation groups</b> [<a href="../talks/Padova_240911.pdf">slides</a>] <br>
+           <li> 11th September: <b>The generalised Saxl graphs of finite permutation groups</b> 
+<!--                [<a href="../talks/Padova_240911.pdf">slides</a>]  -->
+               <br>
                Topics in Group Theory, Padova, Italy</li>
-           <li> 6th September: <b>Bases for permutation groups</b> [<a href="../talks/Bicocca_240906.pdf">notes</a>] [<a href="https://drive.google.com/file/d/1VJtQ6fgtsg8KwYnpbQnU5DOdpWcjyOFr/view">webpage</a>] <br>
+           <li> 6th September: <b>Bases for permutation groups</b> 
+<!--                [<a href="../talks/Bicocca_240906.pdf">notes</a>] -->
+               [<a href="https://drive.google.com/file/d/1VJtQ6fgtsg8KwYnpbQnU5DOdpWcjyOFr/view">webpage</a>] <br>
                Algebra Seminar, University of Milano-Bicocca, Italy</li>
-           <li> 2nd July: <b>Permutation groups of rank three</b> [<a href="../talks/rank3_Florence_240702.pdf">slides</a>] [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
+           <li> 2nd July: <b>Permutation groups of rank three</b> 
+<!--                [<a href="../talks/rank3_Florence_240702.pdf">slides</a>] -->
+               [<a href="https://sites.google.com/view/groupsinflorenceiv/program#h.ip9m8h37wqjn">webpage</a>]<br>
                Group Theory in Florence IV, University of Florence, Italy</li>
-           <li> 13th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://jas.rwth-aachen.de/">webpage</a>]<br>
+           <li> 13th June: <b>Permutations, bases and low rank groups</b> 
+<!--                [<a href="../talks/Germany_2406.pdf">notes</a>] -->
+               [<a href="https://jas.rwth-aachen.de/">webpage</a>]<br>
                Joint Algebra Seminar, RWTH Aachen, Germany</li>
-           <li> 11th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://reh.math.uni-duesseldorf.de/~internet/Seminar_Groups/seminarS24.html">webpage</a>]<br>
+           <li> 11th June: <b>Permutations, bases and low rank groups</b> 
+<!--                [<a href="../talks/Germany_2406.pdf">notes</a>] -->
+               [<a href="https://reh.math.uni-duesseldorf.de/~internet/Seminar_Groups/seminarS24.html">webpage</a>]<br>
                Advanced Seminar on Group Theory, HHU Düsseldorf, Germany</li>
-           <li> 6th June: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Germany_2406.pdf">notes</a>] [<a href="https://math.rptu.de/ags/agag/aktivitaeten/oberseminare/seminar-gruppen-und-darstellungen/">webpage</a>] <br>
+           <li> 6th June: <b>Permutations, bases and low rank groups</b> 
+<!--                [<a href="../talks/Germany_2406.pdf">notes</a>] -->
+               [<a href="https://math.rptu.de/ags/agag/aktivitaeten/oberseminare/seminar-gruppen-und-darstellungen/">webpage</a>] <br>
                Guest Seminar Groups and Representations, RPTU Kaiserslautern-Landau, Germany</li>
-           <li> 19th March: <b>Permutations, bases and low rank groups</b> [<a href="../talks/Bristol_240319.pdf">notes</a>] [<a href="https://www.bristolmathsresearch.org/seminar/hongyi-huang/">webpage</a>] <br>
+           <li> 19th March: <b>Permutations, bases and low rank groups</b> 
+<!--                [<a href="../talks/Bristol_240319.pdf">notes</a>] -->
+               [<a href="https://www.bristolmathsresearch.org/seminar/hongyi-huang/">webpage</a>] <br>
                Algebra Seminar, UoB</li>
-           <li> 29th January: <b>Bases for permutation groups</b> [<a href="../talks/Warwick_240129.pdf">notes</a>] [<a href="https://warwick.ac.uk/fac/sci/maths/research/events/seminars/areas/algebra/23-24/">webpage</a>] <br>
+           <li> 29th January: <b>Bases for permutation groups</b> 
+<!--                [<a href="../talks/Warwick_240129.pdf">notes</a>] -->
+               [<a href="https://warwick.ac.uk/fac/sci/maths/research/events/seminars/areas/algebra/23-24/">webpage</a>] <br>
                Algebra Seminar, University of Warwick</li>
        </ul>
       </div>
