--- a/meetings.html
+++ b/meetings.html
@@ -64,10 +64,10 @@
         <p>
       <div class="list">
         <ul>
-            <li> <i>26th Postgraduate Group Theory Conference (PGTC)</i> [website to appear]<br>
+            <li> <i>26th Postgraduate Group Theory Conference (PGTC)</i> [<a href="https://sites.google.com/view/pgtc2025">website</a>]<br>
             UoB, July 2025 <br>
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a>, <a href="https://penelopeazuelos.com/">Pénélope Azuelos</a>, <a href="https://dguo97.github.io//">David Guo</a>, <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> and <a href="https://research-information.bris.ac.uk/en/persons/sarah-o-n-martin">Sarah Martin</a>
-          </li>
+            </li>
           <li> <i>Bristol Junior Algebra and Combinatorics Seminar</i> [<a href="https://sites.google.com/view/bjacs/home">website</a>] <br>
             UoB, February -- May 2024 <br>
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> </li>
