--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </p>
         
         <p>
-      I am co-organising the <a href="https://www.gtseminar.xyz/">Seminars on Groups and Graphs</a> based at SUSTech from 2021.
+      I am co-organising the <a href="https://www.gtseminar.xyz/">26th Postgraduate Group Theory Conference</a>, which will be held in July 2025 at Bristol.
     </p>
 
         <p>
