--- a/talks.html
+++ b/talks.html
@@ -67,7 +67,7 @@
            <li> 24th December: <b>Permutation groups, symmetry breaking and probability</b> 
 <!--                [<a href="../talks/ZJU_241224.pdf">notes</a>]  -->
                <br>
-               Zhejiang University</li>
+               Zhejiang University, Hangzhou, China</li>
            <li> 12th December: <b>Bases and Saxl graphs over the past four years</b>
 <!--                [<a href="../talks/SUSTech_241212.pdf">notes</a>]  -->
                [<a href="https://math.sustech.edu.cn/seminar_all/13205.html">webpage</a>]<br>
