--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </p>
         
         <p>
-      I am co-organising the <a href="https://sites.google.com/view/pgtc2025/">26th Postgraduate Group Theory Conference</a>, which will be held in July 2025 at Bristol.
+      I am co-organising the <a href="https://sites.google.com/view/pgtc2025/">26th Postgraduate Group Theory Conference</a> (PGTC 2025), which will be held in July 2025 at UoB.
     </p>
 
         <p>
